Stopped Landing page, Register page, Preregister page and Login page from being scrollable by hiding overflow and reversed the colours of the normal and hover state of the socials register buttons

--- a/dotask/static/css/landing_page.css
+++ b/dotask/static/css/landing_page.css
@@ -5,6 +5,7 @@
     padding: 0%;
     margin: auto;
     font-family: graduate;
+    overflow: hidden;
     }
 
     .main-page{
